--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
         </nav>
         <ul class="header-contact-list header-list list">
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact-link link"
+              href="mailto:info@devstudio.com"
+            >
+              <svg class="icon-headder" width="16" height="12">
+                <use href="./images/icons.svg#icon-headder-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111"
+            <a class="header-contact-link link" href="tel:+380961111111">
+              <svg class="icon-headder" width="10" height="16">
+                <use
+                  href="./images/icons.svg#icon-headder-smartphone"
+                ></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -67,6 +76,15 @@
           <h2 class="features-title visually-hidden">Особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-icons">
+                <svg
+                  class="features-icon icon-features-antenna"
+                  width="70"
+                  height="70"
+                >
+                  <use href="./images/icons.svg#icon-features-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -74,6 +92,15 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icons">
+                <svg
+                  class="features-icon icon-features-clock"
+                  width="70"
+                  height="70"
+                >
+                  <use href="./images/icons.svg#icon-features-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -81,12 +108,30 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icons">
+                <svg
+                  class="features-icon icon-features-diagram"
+                  width="70"
+                  height="70"
+                >
+                  <use href="./images/icons.svg#icon-features-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icons">
+                <svg
+                  class="features-icon icon-features-astronaut"
+                  width="70"
+                  height="70"
+                >
+                  <use href="./images/icons.svg#icon-features-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -140,46 +185,212 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/emp1.jpg"
-                width="270"
-                alt="Фото Ігоря Дем'яненко"
-              />
-              <div class="team-description">
+              <div class="team-card">
+                <img
+                  class="team-image"
+                  src="./images/emp1.jpg"
+                  width="270"
+                  alt="Фото Ігоря Дем'яненко"
+                />
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="soc-link-list list">
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/emp2.jpg"
-                width="270"
-                alt="Фото Ольги Рєпіни"
-              />
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-card">
+                <img
+                  class="team-image"
+                  src="./images/emp2.jpg"
+                  width="270"
+                  alt="Фото Ольги Рєпіни"
+                />
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+                <ul class="soc-link-list list">
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/emp3.jpg"
-                width="270"
-                alt="Фото Миколи Тарасова"
-              />
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-card">
+                <img
+                  class="team-image"
+                  src="./images/emp3.jpg"
+                  width="270"
+                  alt="Фото Миколи Тарасова"
+                />
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+                <ul class="soc-link-list list">
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/emp4.jpg"
-                width="270"
-                alt="Фото Михайла Єрмакова"
-              />
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-card">
+                <img
+                  class="team-image"
+                  src="./images/emp4.jpg"
+                  width="270"
+                  alt="Фото Михайла Єрмакова"
+                />
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+                <ul class="soc-link-list list">
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="soc-link-item">
+                    <a class="soc-link-icon-team" href="">
+                      <svg class="soc-link-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Секція Клієнти -->
+      <section class="section-clients section">
+        <div class="clients container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-1"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-2"></use></svg
+              ></a>
+            </li>
+
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-3"></use></svg
+              ></a>
+            </li>
+
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-4"></use></svg
+              ></a>
+            </li>
+
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-5"></use></svg
+              ></a>
+            </li>
+
+            <li class="clients-item">
+              <a class="clients-icons" href="">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-clients-logo-6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -187,34 +398,65 @@
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <a class="footer-logo logo footer-link link" href="./index.html"
-          ><span class="logo-blue">Web</span>Studio</a
-        >
-        <address id="contacts" class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                class="address-link-map link"
-                href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
-                target="_blank"
-                rel="noopenner norefferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="footer-main">
+          <a class="footer-logo logo footer-link link" href="./index.html"
+            ><span class="logo-blue">Web</span>Studio</a
+          >
+          <address id="contacts" class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a
+                  class="address-link-map link"
+                  href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
+                  target="_blank"
+                  rel="noopenner norefferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a
+                  class="address-contact-link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-contact-link link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc-links">
+          <h2 class="footer-title-soc-links">приєднуйтесь</h2>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a
-                class="address-contact-link link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a class="address-contact-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
