--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,21 @@
         </nav>
         <ul class="header-contact-list header-list list">
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact-link link"
+              href="mailto:info@devstudio.com"
+            >
+              <svg class="icon-headder" width="16" height="12">
+                <use href="./images/icons.svg#icon-headder-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111"
+            <a class="header-contact-link link" href="tel:+380961111111">
+              <svg class="icon-headder" width="10" height="16">
+                <use
+                  href="./images/icons.svg#icon-headder-smartphone"
+                ></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -85,122 +94,140 @@
           <div class="projects">
             <ul class="projects-list list">
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project1.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 1"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Технокряк</h2>
-                  <p class="projects-text">Веб-сайт</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 1"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Технокряк</h2>
+                    <p class="projects-text">Веб-сайт</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project2.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 2"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p class="projects-text">Дизайн</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project2.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 2"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">
+                      Постер New Orlean vs Golden Star
+                    </h2>
+                    <p class="projects-text">Дизайн</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project3.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 3"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Ресторан Seafood</h2>
-                  <p class="projects-text">Додаток</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project3.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 3"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Ресторан Seafood</h2>
+                    <p class="projects-text">Додаток</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project4.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 4"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Проєкт Prime</h2>
-                  <p class="projects-text">Маркетинг</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project4.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 4"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Проєкт Prime</h2>
+                    <p class="projects-text">Маркетинг</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project5.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 5"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Проєкт Boxes</h2>
-                  <p class="projects-text">Додаток</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project5.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 5"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Проєкт Boxes</h2>
+                    <p class="projects-text">Додаток</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project6.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 6"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Inspiration has no Borders</h2>
-                  <p class="projects-text">Веб-сайт</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project6.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 6"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Inspiration has no Borders</h2>
+                    <p class="projects-text">Веб-сайт</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project7.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 7"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Видання Limited Edition</h2>
-                  <p class="projects-text">Дизайн</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project7.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 7"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Видання Limited Edition</h2>
+                    <p class="projects-text">Дизайн</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project8.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 8"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Проєкт LAB</h2>
-                  <p class="projects-text">Маркетинг</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project8.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 8"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Проєкт LAB</h2>
+                    <p class="projects-text">Маркетинг</p>
+                  </div>
                 </div>
               </li>
               <li class="projects-item">
-                <img
-                  class="projects-image"
-                  src="./images/project9.jpg"
-                  width="370"
-                  height="294"
-                  alt="photo project 9"
-                />
-                <div class="projects-description">
-                  <h2 class="projects-name">Growing Business</h2>
-                  <p class="projects-text">Додаток</p>
+                <div class="project-card">
+                  <img
+                    class="projects-image"
+                    src="./images/project9.jpg"
+                    width="370"
+                    height="294"
+                    alt="photo project 9"
+                  />
+                  <div class="projects-description">
+                    <h2 class="projects-name">Growing Business</h2>
+                    <p class="projects-text">Додаток</p>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -210,34 +237,65 @@
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <a class="footer-logo logo footer-link link" href="./index.html"
-          ><span class="logo-blue">Web</span>Studio</a
-        >
-        <address id="contacts" class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                class="address-link-map link"
-                href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
-                target="_blank"
-                rel="noopenner norefferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="footer-main">
+          <a class="footer-logo logo footer-link link" href="./index.html"
+            ><span class="logo-blue">Web</span>Studio</a
+          >
+          <address id="contacts" class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a
+                  class="address-link-map link"
+                  href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
+                  target="_blank"
+                  rel="noopenner norefferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a
+                  class="address-contact-link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-contact-link link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc-links">
+          <h2 class="footer-title-soc-links">приєднуйтесь</h2>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a
-                class="address-contact-link link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a class="address-contact-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-links-item">
+              <a class="soc-link-icon-footer" href="">
+                <svg class="soc-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
