--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container container-header">
         <nav class="navigation">
-          <a class="header-logo logo header-link link" href="./index.html"
+          <a class="header-logo logo link" href="./index.html"
             ><span class="logo-blue">Web</span>Studio</a
           >
           <ul class="header-menu-list header-list list">
@@ -40,7 +40,7 @@
         <ul class="header-contact-list header-list list">
           <li class="header-contact-item">
             <a
-              class="header-contact-link link"
+              class="header-contact-link header-link link"
               href="mailto:info@devstudio.com"
             >
               <svg class="icon-headder" width="16" height="12">
@@ -49,7 +49,10 @@
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111">
+            <a
+              class="header-contact-link header-link link"
+              href="tel:+380961111111"
+            >
               <svg class="icon-headder" width="10" height="16">
                 <use
                   href="./images/icons.svg#icon-headder-smartphone"
@@ -192,36 +195,44 @@
                   width="270"
                   alt="Фото Ігоря Дем'яненко"
                 />
-                <h3 class="team-name">Ігор Дем'яненко</h3>
-                <p class="team-position">Product Designer</p>
-                <ul class="soc-link-list list">
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg
-                    ></a>
-                  </li>
-                </ul>
+                <div class="team-card-description">
+                  <h3 class="team-name">Ігор Дем'яненко</h3>
+                  <p class="team-position">Product Designer</p>
+                  <ul class="soc-link-list list">
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -232,36 +243,44 @@
                   width="270"
                   alt="Фото Ольги Рєпіни"
                 />
-                <h3 class="team-name">Ольга Рєпіна</h3>
-                <p class="team-position">Frontend Developer</p>
-                <ul class="soc-link-list list">
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg
-                    ></a>
-                  </li>
-                </ul>
+                <div class="team-card-description">
+                  <h3 class="team-name">Ольга Рєпіна</h3>
+                  <p class="team-position">Frontend Developer</p>
+                  <ul class="soc-link-list list">
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -272,36 +291,44 @@
                   width="270"
                   alt="Фото Миколи Тарасова"
                 />
-                <h3 class="team-name">Микола Тарасов</h3>
-                <p class="team-position">Marketing</p>
-                <ul class="soc-link-list list">
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg
-                    ></a>
-                  </li>
-                </ul>
+                <div class="team-card-description">
+                  <h3 class="team-name">Микола Тарасов</h3>
+                  <p class="team-position">Marketing</p>
+                  <ul class="soc-link-list list">
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -312,36 +339,44 @@
                   width="270"
                   alt="Фото Михайла Єрмакова"
                 />
-                <h3 class="team-name">Михайло Єрмаков</h3>
-                <p class="team-position">UI Designer</p>
-                <ul class="soc-link-list list">
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg
-                    ></a>
-                  </li>
-                  <li class="soc-link-item">
-                    <a class="soc-link-icon-team" href="">
-                      <svg class="soc-link-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg
-                    ></a>
-                  </li>
-                </ul>
+                <div class="team-card-description">
+                  <h3 class="team-name">Михайло Єрмаков</h3>
+                  <p class="team-position">UI Designer</p>
+                  <ul class="soc-link-list list">
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="soc-link-item">
+                      <a class="soc-link-icon-team" href="">
+                        <svg class="soc-link-icon" width="20" height="20">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -406,7 +441,7 @@
             <ul class="address-list list">
               <li class="address-item">
                 <a
-                  class="address-link-map link"
+                  class="address-link-map address-link link"
                   href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
                   target="_blank"
                   rel="noopenner norefferrer nofollow"
@@ -415,13 +450,15 @@
               </li>
               <li class="address-item">
                 <a
-                  class="address-contact-link link"
+                  class="address-contact-link address-link link"
                   href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address-item">
-                <a class="address-contact-link link" href="tel:+380961111111"
+                <a
+                  class="address-contact-link address-link link"
+                  href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
