--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container container-header">
         <nav class="navigation">
-          <a class="header-logo logo header-link link" href="./index.html"
+          <a class="header-logo logo link" href="./index.html"
             ><span class="logo-blue">Web</span>Studio</a
           >
           <ul class="header-menu-list header-list list">
@@ -40,7 +40,7 @@
         <ul class="header-contact-list header-list list">
           <li class="header-contact-item">
             <a
-              class="header-contact-link link"
+              class="header-contact-link header-link link"
               href="mailto:info@devstudio.com"
             >
               <svg class="icon-headder" width="16" height="12">
@@ -49,7 +49,10 @@
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+380961111111">
+            <a
+              class="header-contact-link header-link link"
+              href="tel:+380961111111"
+            >
               <svg class="icon-headder" width="10" height="16">
                 <use
                   href="./images/icons.svg#icon-headder-smartphone"
@@ -245,7 +248,7 @@
             <ul class="address-list list">
               <li class="address-item">
                 <a
-                  class="address-link-map link"
+                  class="address-link-map address-link link"
                   href="https://goo.gl/maps/xQQ1BnmMgebPrQSEA"
                   target="_blank"
                   rel="noopenner norefferrer nofollow"
@@ -254,13 +257,15 @@
               </li>
               <li class="address-item">
                 <a
-                  class="address-contact-link link"
+                  class="address-contact-link address-link link"
                   href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address-item">
-                <a class="address-contact-link link" href="tel:+380961111111"
+                <a
+                  class="address-contact-link address-link link"
+                  href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
